--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -34,7 +34,9 @@
 
                 {% block navbar_collapse %}
                 <div class="collapse navbar-collapse" id="navbar">
- <a class="nav-right" href="/logout/">Logout</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-right" href="/logout/">Logout</a>
+                    {% endif %}
                     {% block navbar_collapse_nav %}{% endblock %}
 
                 </div>
