--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -12,8 +12,9 @@
     
         {% block title %}{% endblock %}
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">        
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css">        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"> 
         {% block extra_css %}{% endblock %}
     </head>
     {% endblock %}
@@ -25,7 +26,7 @@
 
             {% block nav_content %}
                 {% block navbar_brand %}
-                    <a class="navbar-brand" href="#">NAMO Exports</a>
+                    <a class="navbar-brand" href="{% url 'dashboard' %}">NAMO Exports</a>
                 {% endblock %}
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +34,7 @@
                 </button>
 
                 {% block navbar_collapse %}
-                <div class="collapse navbar-collapse" id="navbar">
+                <div class="collapse navbar-collapse offset-10" id="navbar">
                     {% if user.is_authenticated %}
                     <a class="nav-right" href="/logout/">Logout</a>
                     {% endif %}
@@ -66,6 +67,12 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+        <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $('.datatable').DataTable();
+            });
+        </script>
         {% block extra_js %}{% endblock %}
 
     </body>
