--- a/templates/shop/deliveries.html
+++ b/templates/shop/deliveries.html
@@ -4,7 +4,7 @@
 
 {% block container %}
 <div>
-	<button type="button" class="btn btn-info btn-sm offset-11" data-toggle="modal" data-target="#myModal">Add Delivery</button>
+	<button type="button" class="btn btn-info btn-sm offset-11" data-toggle="modal" data-target="#myModal">Add Credit</button>
 	<table class="table datatable" id="suppliesTable">
 		<thead>
 		<tr>
@@ -12,6 +12,7 @@
 			<th>Delivery</th>
 			<th>Qty</th>
 			<th>Rate</th>
+			<th>Credit</th>
 			<th>Total</th>
 		</tr>
 	</thead><tbody>
@@ -21,6 +22,7 @@
 			<td>{{delivery.buyer}}</td>
 			<td>{{delivery.weight}}</td>
 			<td>{{delivery.rate}}</td>
+			<td>{{delivery.credit}}</td>
 			<td>{{delivery.amount}}</td>
 		</tr>
 		{% endfor %}
@@ -29,6 +31,7 @@
 			<td></td>
 			<td></td>
 			<td>{{total.weight}}</td>
+			<td></td>
 			<td></td>
 			<td>{{total.total}}</td>
 		</tr>
@@ -44,7 +47,7 @@
   	<form method="post">
   	{% csrf_token %}
     <div class="modal-header">
-      <h4 class="modal-title">Add Delivery</h4>
+      <h4 class="modal-title">Add Credit</h4>
       <button type="button" class="close" data-dismiss="modal">&times;</button>
     </div>
     <div class="modal-body">
