--- a/templates/shop/supplier_detail.html
+++ b/templates/shop/supplier_detail.html
@@ -4,45 +4,55 @@
 
 {% block container %}
 <div>
-	<button type="button" class="btn btn-info btn-sm offset-11" data-toggle="modal" data-target="#myModal">Add Supply</button>
+	<form action="" method="get">
+        <p><label for="id_month">Month:</label> <input type="text" name="date" id="id_month"></p>
+        <input type="submit" />
+    </form>
 	<table class="table datatable" id="suppliesTable">
 		<thead>
 		<tr>
 			<th>Date</th>
 			<th>Supply</th>
-			<th>Buyer</th>
 			<th>Qty</th>
 			<th>Rate</th>
 			<th>Debit</th>
 			<th>Total</th>
-			{% if user.is_superuser %}
-			<th>Action</th>
-			{% endif %}
 		</tr>
 	</thead><tbody>
 		{% for supply in supplies %}
 		<tr>
 			<td>{{supply.date}}</td>
 			<td>{{supply.supplier}}</td>
-			<td>{{supply.buyer.name}}</td>
 			<td>{{supply.weight}}</td>
 			<td>{{supply.rate}}</td>
 			<td>{{supply.debt}}</td>
 			<td>{{supply.amount}}</td>
-			{% if user.is_superuser %}
-			<td><a href="{% url 'delete_supplies' supply.id %}" class="btn btn-sm btn-danger">Delete</a></td>
-			{% endif %}
 		</tr>
 		{% endfor %}
 		</tbody>
 		<tr>
 			<td></td>
 			<td></td>
-			<td></td>
 			<td>{{total.weight}}</td>
 			<td></td>
 			<td></td>
 			<td>{{total.total}}</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td>Commission amount (10%)</td>
+			<td></td>
+			<td></td>
+			<td>{{commission}}</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td>Final Amount</td>
+			<td></td>
+			<td></td>
+			<td>{{final_amount}}</td>
 		</tr>
 	</table>
 </div>
@@ -72,5 +82,20 @@
 </div>
 </div>
 
+{% endblock %}
 
+{% block extra_js %}
+  <script>
+  $(document).ready(function(){
+    $( "#id_month" ).datepicker({
+    	dateFormat: 'mm-yy',
+	 	changeMonth: true,
+        changeYear: true,
+        showButtonPanel: true,
+        onClose: function(dateText, inst) { 
+            $(this).datepicker('setDate', new Date(inst.selectedYear, inst.selectedMonth, 1));
+        }
+    });
+  });
+  </script>
 {% endblock %}
