--- a/templates/shop/buyer_detail.html
+++ b/templates/shop/buyer_detail.html
@@ -1,13 +1,26 @@
 {% extends 'common/base.html' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Deliveries{% endblock %}
 
 {% block container %}
 <div>
-	<form action="" method="get">
-        <p><label for="id_month">Month:</label> <input type="text" name="date" id="id_month"></p>
-        <input type="submit" />
-    </form>
+	<div class="row">
+		<div class="col-md-6">
+			<form action="" method="get">
+				<div class="row">
+					<div class="form-group col-xs-6">
+			        	<label for="id_month">Month:</label> <input type="text" name="date" id="id_month">
+					</div>
+					<div class="form-group col-xs-6">
+					    <input type="submit" />
+					</div>
+				</div>
+		    </form>
+		</div>
+		<div class="col-md-6">
+			<button class="btn btn-info btn-sm" onclick="window.print();">Print</button>
+		</div>
+	</div>
 	<table class="table datatable" id="suppliesTable">
 		<thead>
 		<tr>
